--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -41,14 +41,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- DEVTOOLS -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-
 		<!-- MODELMAPPER -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
@@ -69,14 +61,19 @@
 			</exclusions>
 		</dependency>
 
+		<!-- EUREKA CLIENT -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+
+		<!-- CONFIG CLIENT -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+
+		<!-- ACTUATOR -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
